css: fix alignemnt

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,8 +17,7 @@ body {
 
 @media only screen and (max-width: 767px) {
 .container[role=main] {
-    margin-left: 0;
-    margin-right: 0;
+    justify-content: center;
 }
 }
 
